# NDMC

./: CMakeLists.txt  README.md
src/: main.cpp
src/cases/: blockingCommunicationRing.cpp  blockingCommunicationRing.hpp  communicationRing.cpp  communicationRing.hpp  communicationRingV2.cpp  communicationRingV2.hpp  miniRaceCondition.cpp  miniRaceCondition.hpp
src/utility/: auxiliaryFunctions.hpp
